@@ -1,4 +1,6 @@
 Version 1.0.3 (not yet released):
+- Fix GNU SASL support: replace #ifdef HAVE_GSASL with #ifdef HAVE_LIBGSASL.
+  The old code did not actually use GNU SASL. This bug was introduced in 1.0.2.
 - Prevent to write UIDLs files that we cannot read back:
   - Do not allow UIDs to start with a space.
   - Allow UIDLs file lines to be long enough to hold the longest
